# CodeTranslate

./: .codex  .env.example  .gitignore  README.md  pyproject.toml
examples/node_sample/: package.json
examples/node_sample/src/: server.js  utils.js
examples/sample_source/: main.py  math_utils.py
java_parser_bridge/: pom.xml
output/src/: server.py  utils.py
scripts/: debug_langchain_raw_response.py
src/codetranslate/: __init__.py
src/codetranslate/analysis/: __init__.py  analyzer.py  build_analysis.py  context_builder.py  language_registry.py  language_specs.py  planner.py  project_intelligence.py  scanner.py  sibling_scanner.py
src/codetranslate/analysis/adapters/: __init__.py  base.py  generic.py  go_adapter.py  java_adapter.py  java_bridge.py  java_mapping.py  nodejs_adapter.py  python_adapter.py
src/codetranslate/app/: cli.py  interactive.py
src/codetranslate/core/: __init__.py  logging_utils.py  models.py  path_utils.py  settings.py
src/codetranslate/engine/: __init__.py  orchestrator.py
src/codetranslate/runtime/: language_runtime.py  llm.py  migrator.py  python_import_normalizer.py  repairer.py  reporter.py  tester.py  unit_executor.py  unit_state.py  verifier.py
src/codetranslate/storage/: __init__.py  workspace.py
tests/: test_context_builder.py  test_interactive.py  test_java_adapter.py  test_language_runtime.py  test_llm.py  test_orchestrator.py  test_path_utils.py  test_python_import_normalizer.py  test_reporter.py  test_runtime_guards.py  test_unit_executor.py  test_workspace.py
(+1 files in other folders)
