[project]
name = "codetranslate"
version = "0.1.0"
description = "High-fidelity incremental migration engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "langgraph>=0.2.0",
  "openai>=1.30.0",
  "prompt-toolkit>=3.0.52",
  "socksio>=1.0.0",
]

[project.scripts]
codetranslate = "codetranslate.app.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codetranslate"]
